updated functionality for read and write of different file types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.initialization-mode=embedded
 spring.sql.init.schema-locations=classpath:sql/schema.sql, classpath:sql/customer-product-schema.sql
 spring.sql.init.data-locations=classpath:sql/data.sql, classpath:sql/customer-product-data.sql
 
+log4j.appender.logfile.encoding=UTF-8
+
 # H2 DB Config
 spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.url = jdbc:h2:file:/temp/data/testdb  -- to persist file locally
