--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
+	implementation 'com.opencsv:opencsv:5.9'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.0'
+	implementation 'org.apache.pdfbox:pdfbox:3.0.1'
+	implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
+	implementation 'org.apache.poi:poi:5.2.5'
+	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	compileOnly 'org.projectlombok:lombok:1.18.30'
