added new file formats

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
 	implementation 'org.apache.poi:poi:5.2.5'
 	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.jayway.jsonpath:json-path:2.8.0'
+
 
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
