--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.jayway.jsonpath:json-path:2.8.0'
-
+    implementation 'com.google.protobuf:protobuf-java:3.25.0'
+    implementation 'com.google.protobuf:protobuf-java-util:3.25.0'
 
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
