--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
 server.port=60501
 
+server.error.path=/error
+server.error.whitelabel.enabled=false
+server.error.include-stacktrace=always
+server.error.include-message=always
 
 #server.servlet.context-path=/api - this changes for everything, even the swagger paths, hence commenting
 
