update caching, scheduler etc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+# application properties
+app.scheduler.enabled=true
+app.scheduler.label.eviction.cron=0 * * * * *
+
+#Caching tracing : TRACE
+logging.level.org.springframework.cache=INFO
