--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,9 @@ app.scheduler.label.eviction.cron=0 * * * * *
 
 #Caching tracing : TRACE
 logging.level.org.springframework.cache=INFO
+
+# Upload Multipart
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=src/main/resources/tmp
