images to readme file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,16 @@ spring.sql.init.data-locations=classpath:sql/data.sql, classpath:sql/customer-pr
 
 log4j.appender.logfile.encoding=UTF-8
 
+# SQL Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
 # H2 DB Config
 spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.url = jdbc:h2:file:/temp/data/testdb  -- to persist file locally
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -35,7 +38,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 # application properties
-app.scheduler.enabled=true
+app.scheduler.enabled=false
 app.scheduler.label.eviction.cron=0 * * * * *
 
 #Caching tracing : TRACE
@@ -46,3 +49,6 @@ spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=src/main/resources/tmp
+
+# Reading sensetive information from environment variables
+secret.key=${secret.api.value}
