--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.datasource.initialization-mode=embedded
 spring.sql.init.schema-locations=classpath:sql/schema.sql, classpath:sql/customer-product-schema.sql
 spring.sql.init.data-locations=classpath:sql/data.sql, classpath:sql/customer-product-data.sql
 
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
+spring.datasource.sql-script-encoding=UTF-8
+
 log4j.appender.logfile.encoding=UTF-8
 
 # SQL Logging
@@ -52,3 +55,8 @@ spring.servlet.multipart.location=src/main/resources/tmp
 
 # Reading sensetive information from environment variables
 secret.key=${secret.api.value}
+
+# External Apis
+coindesk.api=https://api.coindesk.com
+dogimage.api=https://dog.ceo
+catfact.api=https://catfact.ninja
