--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,9 @@ spring.sql.init.data-locations=classpath:sql/data.sql, classpath:sql/customer-pr
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
 spring.datasource.sql-script-encoding=UTF-8
 
-log4j.appender.logfile.encoding=UTF-8
+#log4j.appender.logfile.encoding=UTF-8
+logging.level.root=INFO
+logging.level.com.java.springboot.controllers.StatusController=TRACE
 
 # SQL Logging
 logging.level.org.hibernate.SQL=DEBUG
