--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker:3.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+//	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.3.4'
+
+
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
 	implementation 'com.opencsv:opencsv:5.9'
@@ -40,6 +44,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+configurations.all {
+//	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
 }
 
 tasks.named('test') {
