added logging documentation

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,8 @@ dependencies {
 }
 
 configurations.all {
-//	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
+	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
+//	exclude group: "commons-logging", module: "commons-logging"
 }
 
 tasks.named('test') {
