--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding
 spring.datasource.sql-script-encoding=UTF-8
 
 #log4j.appender.logfile.encoding=UTF-8
-logging.level.root=INFO
-logging.level.com.java.springboot.controllers.StatusController=TRACE
+#logging.level.root=INFO
+#logging.level.com.java.springboot.controllers.StatusController=TRACE
 
 # SQL Logging
 logging.level.org.hibernate.SQL=DEBUG
