--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-//	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.3.4'
-
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
@@ -41,14 +40,14 @@ dependencies {
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	compileOnly 'org.projectlombok:lombok:1.18.30'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 configurations.all {
 	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
-//	exclude group: "commons-logging", module: "commons-logging"
+	exclude group: "commons-logging", module: "commons-logging"
 }
 
 tasks.named('test') {
