--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+//	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
@@ -46,7 +46,7 @@ dependencies {
 }
 
 configurations.all {
-	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
+//	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
 	exclude group: "commons-logging", module: "commons-logging"
 }
 
