--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.datasource.sql-script-encoding=UTF-8
 #logging.level.root=INFO
 #logging.level.com.java.springboot.controllers.StatusController=TRACE
 
+
+#logging.level.org.zalando.logbook.Logbook=TRACE
+
 # SQL Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
