--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+//	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
@@ -37,10 +37,12 @@ dependencies {
     implementation 'commons-fileupload:commons-fileupload:1.5'
     implementation 'org.apache.derby:derby:10.17.1.0'
 	implementation 'org.json:json:20240303'
+	implementation('com.github.javafaker:javafaker:1.0.2') {
+		exclude group: 'org.yaml', module: 'snakeyaml'
+	}
 
 	implementation 'org.zalando:logbook-spring-boot-starter:3.9.0'
 	implementation 'net.logstash.logback:logstash-logback-encoder:8.0'
-
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	compileOnly 'org.projectlombok:lombok:1.18.30'
@@ -50,7 +52,7 @@ dependencies {
 }
 
 configurations.all {
-	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
+//	exclude group: "org.springframework.boot", module:"spring-boot-starter-logging"
 	exclude group: "commons-logging", module: "commons-logging"
 }
 
